crates/iroha_schema_derive/tests/ui_fail/transparent_enum_multi_variant.rs
use iroha_schema::IntoSchema;

#[derive(IntoSchema)]
#[schema(transparent)]
enum TransparentEnum {
    First(u64),
    Second(u64),
}

fn main() {}
